spec/.test/config/valid/only_tags.php
<?php

return [
    'tags' => [
        'tag1' => [
            'id311' => [],
            'id312' => [],
        ],
        'tag2' => [
            'id321' => [],
            'id322' => [],
        ],
    ],
];
