spec/.test/config/invalid/aliases.php
<?php

return [
    'parameters' => [],
    'aliases' => 1,
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
    'passes' => [],
    'mappers' => [],
];
